--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ghostversemarketplace"
-version = "0.0.0"
-authors = ["you"]
+version = "0.0.1"
+authors = ["Vladimir Rostok"]
 edition = "2021"
 publish = false
 
